--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <h1>Freelancer Forum</h1>
+    <p>The average starting price is $<span></span>.</p>
+    <h2>Available Freelancers</h2>
+
+    <article>
+        <ul>Name</ul>
+        <ul>Occupation</ul>
+        <ul>Starting Price</ul>
+    </article>
 </body>
 </html>
