The changes in this commit will make the freelancer names and occupations appear on the HTML page.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h2>Available Freelancers</h2>
 
     <article>
-        <ul>Name</ul>
-        <ul>Occupation</ul>
-        <ul>Starting Price</ul>
+        <ul id="name">Name</ul>
+        <ul id="occupation">Occupation</ul>
+        <ul id="startingPrice">Starting Price</ul>
     </article>
 </body>
 </html>
