The changes in this commit will set the font size for the list elements.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h2>Available Freelancers</h2>
 
     <article>
-        <ul id="name">Name</ul>
-        <ul id="occupation">Occupation</ul>
-        <ul id="startingPrice">Starting Price</ul>
+        <ul id="name" class="listName">Name</ul>
+        <ul id="occupation" class="listName">Occupation</ul>
+        <ul id="startingPrice" class="listName">Starting Price</ul>
     </article>
 </body>
 </html>
